--- a/golang/third-part/yeka-zip/test-data/skg-config.ini
+++ b/golang/third-part/yeka-zip/test-data/skg-config.ini
@@ -1,10 +1,12 @@
 [global]
 pop_type = slab
-ucss_host = cd-ucss-230.gatorcloud.skyguardmis.com:443
+slab_id = 100000
+ucss_host = slab.cd-ucss-230.gatorcloud.skyguardmis.com:443
 [tenant]
+tenant_id = 1000011
 ocr_service = 169.254.253.3:8826
 kv_service = 169.254.253.5:8900
 appliance_service = 169.254.253.7:8443
-fpdb_service = 169.254.253.6       #调用方指定端口
-cae_service = 169.254.253.9         #调用方指定端口
-dsa_service = 169.254.253.8         #调用方指定端口
+fpdb_service = 169.254.253.6
+cae_service = 169.254.253.9
+dsa_service = 169.254.253.8
