feat(golang): caZip压缩包测试

--- a/golang/third-part/yeka-zip/test-data/skg-config.ini
+++ b/golang/third-part/yeka-zip/test-data/skg-config.ini
@@ -1,11 +1,10 @@
 [global]
 pop_type = slab
-slab_id = 100000
 ucss_host = slab.cd-ucss-230.gatorcloud.skyguardmis.com:443
-[tenant]
-tenant_id = 1000011
+[pop]
 ocr_service = 169.254.253.3:8826
 kv_service = 169.254.253.5:8900
+[tenant]
 appliance_service = 169.254.253.7:8443
 fpdb_service = 169.254.253.6
 cae_service = 169.254.253.9
